--- a/app/src/main/res/layout/receiving_message_cell.xml
+++ b/app/src/main/res/layout/receiving_message_cell.xml
@@ -42,12 +42,12 @@
                 android:id="@+id/sender_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Bobby"
+                android:text=""
                 android:textColor="@color/messageTextColor"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:layout_marginTop="5dp"
-
+                android:visibility="gone"
                 />
 
             <TextView
