--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -105,7 +105,9 @@
                                 android:layout_gravity="center_vertical"
                                 android:background="@drawable/bottom_border_white"
                                 android:enabled="false"
-                                android:hint="Enter profile Name..."/>
+                                android:maxLines="1"
+                                android:maxLength="@string/profile_name_text"
+                                android:hint="@string/profile_hint"/>
 
                             <ImageView
                                 android:id="@+id/edit_button_prof_name"
@@ -171,6 +173,7 @@
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
+
                   <FrameLayout
                       android:layout_width="45dp"
                       android:layout_height="45dp"
