--- a/app/src/main/res/layout/activity_group_detail.xml
+++ b/app/src/main/res/layout/activity_group_detail.xml
@@ -101,7 +101,7 @@
                     android:orientation="horizontal"
                     android:layout_below="@+id/title_tv">
 
-                <android.support.v7.widget.AppCompatEditText
+                <EditText
                     android:id="@+id/group_name_et"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
@@ -113,6 +113,7 @@
                     android:hint="Group Name"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
+                    android:maxLength="@string/group_name_text"
                     android:enabled="false"
                     android:background="@drawable/bottom_border_white"
                     android:visibility="gone"
