able to handle empty groups in profile and details activity

--- a/app/src/main/res/layout/activity_my_contacts.xml
+++ b/app/src/main/res/layout/activity_my_contacts.xml
@@ -31,6 +31,7 @@
         android:layout_marginRight="20dp"
         android:src="@drawable/ic_add_contact"
         android:scaleType="center"
+        app:backgroundTint="@color/main_theme_1"
         />
 
 </RelativeLayout>
