--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:text="The Authors"
+            android:text="Developers"
             android:layout_marginTop="10dp"
             android:textSize="30sp"
             android:textStyle="bold"
