--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,120 +1,150 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/splash_screen_bck"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.naziur.androidchat.activities.MainActivity"
     android:orientation="vertical"
-    android:weightSum="8"
-    tools:context="com.example.naziur.androidchat.activities.RegisterActivity">
+    >
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/scroller_content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        >
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal">
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:scaleType="fitCenter"
-                android:src="@mipmap/ic_launcher_logo" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
-        android:orientation="vertical">
-
-        <LinearLayout
+            android:id="@+id/main_content"
+            android:layout_centerInParent="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="15dp">
 
-            <android.support.design.widget.TextInputLayout
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/ic_launcher"
+                android:layout_marginBottom="15dp"/>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="5dp">
 
-                <EditText
-                    android:id="@+id/username"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/username"
-                    android:inputType="textEmailAddress"
-                    android:textColorHint="@color/white"
-                    android:textColor="@color/white"
-                    app:backgroundTint="@color/main_theme_1"
-                    android:maxLength="@string/username_text"
-                    android:maxLines="1" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@android:drawable/ic_dialog_email"
+                    android:layout_gravity="center_vertical"/>
 
                 <EditText
                     android:id="@+id/email"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="@color/white"
-                    android:textColor="@color/white"
-                    android:hint="@string/email"
+                    android:ems="10"
+                    android:hint="Email"
                     android:inputType="textEmailAddress"
-                    app:backgroundTint="@color/main_theme_1"
-                    android:maxLines="1" />
-            </android.support.design.widget.TextInputLayout>
+                    android:background="@drawable/bottom_border_white"
+                    android:padding="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:maxLines="1"
+                    />
+            </LinearLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="5dp"
+                android:gravity="center_vertical">
+
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:src="@drawable/ic_username"
+                    android:layout_gravity="center_vertical"/>
+
+                <EditText
+                    android:id="@+id/username"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Username"
+                    android:inputType="textPersonName"
+                    android:background="@drawable/bottom_border_white"
+                    android:padding="15dp"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:maxLines="1"
+                    android:maxLength="@string/username_text"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="5dp"
+                android:gravity="center_vertical">
+
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:src="@drawable/ic_profile"
+                    android:layout_gravity="center_vertical"/>
 
                 <EditText
                     android:id="@+id/profile"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/profile_hint"
-                    android:inputType="textEmailAddress"
-                    android:textColorHint="@color/white"
+                    android:ems="10"
+                    android:hint="Profile"
+                    android:inputType="textPersonName"
+                    android:background="@drawable/bottom_border_white"
+                    android:padding="15dp"
                     android:textColor="@color/white"
-                    app:backgroundTint="@color/main_theme_1"
+                    android:textColorHint="@color/white"
+                    android:maxLines="1"
                     android:maxLength="@string/username_text"
-                    android:maxLines="1" />
-            </android.support.design.widget.TextInputLayout>
+                    />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/register_btn"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:onClick="btnLoginTapped"
+                android:text="REGISTER"
+                android:background="@color/white"
+                android:textColor="#6fd5b6"
+                android:textStyle="bold"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:layout_marginTop="10dp"
+                android:id="@+id/login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/login"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                />
 
         </LinearLayout>
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:id="@+id/login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:layout_gravity="center_horizontal"
-            />
+    </ScrollView>
 
-        <Button
-            android:id="@+id/register_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/main_theme_1"
-            android:text="REGISTER"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
