--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -127,8 +127,8 @@
         android:layout_margin="10dp"
         app:backgroundTint="@color/white"
         android:scaleType="center"
-        android:src="@android:drawable/ic_menu_more"
-        android:visibility="gone"
+        android:src="@drawable/ic_bottom"
+
         />
 
 </RelativeLayout>
