hid the to bottom button in chat activities

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -128,7 +128,7 @@
         app:backgroundTint="@color/white"
         android:scaleType="center"
         android:src="@drawable/ic_bottom"
-
+        android:visibility="gone"
         />
 
 </RelativeLayout>
