--- a/app/src/main/res/layout/activity_chat_detail.xml
+++ b/app/src/main/res/layout/activity_chat_detail.xml
@@ -171,6 +171,7 @@
                 app:cardUseCompatPadding="true">
 
                 <LinearLayout
+                    android:id="@+id/block_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
