Added button for accessing emojis in group and single chat

--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -10,7 +10,7 @@
         android:text="test"
         android:layout_gravity="center_horizontal"
         android:textSize="14sp"
-
+        android:visibility="gone"
         android:layout_margin="3dp"/>
 
     <ProgressBar
