--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/chat_background"
@@ -35,6 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:weightSum="2"
             android:background="@drawable/rounded_shadow"
             android:focusable="true"
             android:focusableInTouchMode="true"
@@ -43,10 +45,13 @@
             <requestFocus />
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/media_button"
-                android:layout_width="35dp"
+                android:id="@+id/emoji_button"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_action_media"
+                android:layout_weight="0.2"
+                android:src="@drawable/ic_emoji"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginRight="2dp"
                 android:layout_marginEnd="2dp"
                 android:layout_gravity="top"
@@ -54,10 +59,11 @@
                 android:background="?selectableItemBackgroundBorderless"
                 />
 
-            <EditText
+            <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
                 android:id="@+id/comment_text"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1.6"
                 android:fadeScrollbars="false"
                 android:hint="@string/enter_message"
                 android:inputType="textMultiLine"
@@ -66,6 +72,19 @@
                 android:paddingBottom="5dp"
                 android:paddingRight="5dp"
                 android:paddingEnd="5dp"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/media_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.2"
+                android:src="@drawable/ic_action_media"
+                android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
+                android:layout_gravity="top"
+                android:clickable="true"
+                android:background="?selectableItemBackgroundBorderless"
+                />
 
         </LinearLayout>
 
