--- a/app/src/main/res/layout/my_message_cell.xml
+++ b/app/src/main/res/layout/my_message_cell.xml
@@ -4,16 +4,16 @@
     android:layout_width="match_parent"
     android:padding="10dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        >
 
         <TextView
             android:id="@+id/date_seperator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_centerHorizontal="true"
             android:layout_margin="5dp"
             android:background="@drawable/button_shape"
             android:paddingBottom="5dp"
@@ -23,24 +23,28 @@
             android:text="08/09/2018"
             android:textColor="@color/white"
             android:textSize="18sp"
-            android:visibility="gone" />
+            android:visibility="gone"
+             />
 
         <LinearLayout
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/date_seperator"
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
             android:background="@drawable/out_going_speech"
+            android:gravity="end"
             android:paddingBottom="4dp"
             android:paddingEnd="16dp"
             android:paddingLeft="6dp"
             android:paddingRight="16dp"
             android:paddingStart="6dp"
-            android:paddingTop="4dp">
+            android:paddingTop="4dp"
+            android:layout_alignParentRight="true">
 
-            <TextView
+            <hani.momanii.supernova_emoji_library.Helper.EmojiconTextView
                 android:id="@+id/wishMessage"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/long_text"
                 android:textColor="@color/messageTextColor"
@@ -52,7 +56,8 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                >
 
                 <TextView
                     android:id="@+id/dateTime"
@@ -68,7 +73,8 @@
                     android:layout_marginEnd="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginStart="10dp" />
+                    android:layout_marginStart="10dp"
+                    />
 
                 <ImageView
                     android:id="@+id/receive_status"
@@ -82,5 +88,5 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 </FrameLayout>
