--- a/app/src/main/res/layout/receiving_message_cell.xml
+++ b/app/src/main/res/layout/receiving_message_cell.xml
@@ -50,7 +50,7 @@
                 android:visibility="gone"
                 />
 
-            <TextView
+            <hani.momanii.supernova_emoji_library.Helper.EmojiconTextView
                 android:id="@+id/wishMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
