--- a/app/src/main/res/layout/system_message_cell.xml
+++ b/app/src/main/res/layout/system_message_cell.xml
@@ -33,7 +33,7 @@
         android:padding="10dp"
         android:orientation="vertical">
 
-    <TextView
+    <hani.momanii.supernova_emoji_library.Helper.EmojiconTextView
         android:id="@+id/wishMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
