--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -97,7 +97,7 @@
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
 
-                            <android.support.v7.widget.AppCompatEditText
+                            <EditText
                                 android:id="@+id/edit_prof_name"
                                 android:layout_width="0dp"
                                 android:layout_height="48dp"
@@ -107,6 +107,7 @@
                                 android:enabled="false"
                                 android:maxLines="1"
                                 android:maxLength="@string/profile_name_text"
+                                android:inputType="textPersonName"
                                 android:hint="@string/profile_hint"/>
 
                             <ImageView
