--- a/app/src/main/res/layout/activity_group_detail.xml
+++ b/app/src/main/res/layout/activity_group_detail.xml
@@ -28,7 +28,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:adjustViewBounds="true"
-                android:src="@drawable/unknown"
+                android:src="@drawable/ic_group_unknown"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7"
                 android:background="@android:color/transparent"/>
@@ -73,7 +73,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="15dp"
+                android:paddingBottom="10dp"
                 android:background="@drawable/bottom_border_2">
 
                 <TextView
@@ -152,7 +152,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="15dp"
+                android:paddingBottom="10dp"
                 android:background="@drawable/bottom_border_2">
 
                 <TextView
@@ -164,13 +164,30 @@
                     android:textColor="@color/white"/>
 
                 <TextView
+                    android:layout_marginTop="5dp"
                     android:id="@+id/admin_tv"
                     android:layout_below="@id/admin_header"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/no_admin"
                     android:textSize="13sp"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white"
+                    android:visibility="gone"/>
+
+                <Button
+                    android:id="@+id/be_admin"
+                    android:layout_below="@+id/admin_header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/be_admin"
+                    android:background="@color/main_theme_1"
+                    android:padding="5dp"
+                    android:textColor="@color/white"
+                    android:drawableLeft="@android:drawable/ic_lock_idle_lock"
+                    android:drawableStart="@android:drawable/ic_lock_idle_lock"
+                    android:visibility="gone"
+                    />
 
             </RelativeLayout>
 
@@ -191,7 +208,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="15dp"
+                    android:paddingBottom="10dp"
                     android:background="@drawable/bottom_border_2">
 
                     <TextView
@@ -204,16 +221,18 @@
 
                     <TextView
                         android:id="@+id/empty_view"
-                        android:layout_below="@id/members_header"
+                        android:layout_below="@+id/members_header"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
                         android:text="No Members Found"
                         android:textSize="13sp"
                         android:textColor="@color/white"
                         android:visibility="gone"/>
 
                     <ListView
-                        android:layout_marginTop="15dp"
+                        android:layout_below="@+id/members_header"
+                        android:layout_marginTop="5dp"
                         android:id="@+id/members_list_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
