--- a/app/src/main/res/layout/my_image_message_cell.xml
+++ b/app/src/main/res/layout/my_image_message_cell.xml
@@ -30,12 +30,12 @@
             android:layout_height="270dp"
             android:layout_gravity="end"
             android:background="@drawable/out_going_speech"
-            android:paddingBottom="4dp"
-            android:paddingEnd="16dp"
-            android:paddingLeft="6dp"
-            android:paddingRight="16dp"
-            android:paddingStart="6dp"
-            android:paddingTop="4dp">
+            android:paddingBottom="1dp"
+            android:paddingLeft="1dp"
+            android:paddingStart="1dp"
+            android:paddingEnd="11dp"
+            android:paddingRight="11dp"
+            android:paddingTop="1dp">
 
             <ImageView
                 android:id="@+id/sending_img_cell"
@@ -49,23 +49,22 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true">
+                android:layout_alignParentStart="true"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/dateTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:shadowColor="#000000"
                     android:shadowDx="1.5"
                     android:shadowDy="1.3"
                     android:shadowRadius="1.6"
                     android:text="13 May 2017, 1:19 AM"
-                    android:textColor="@color/timeTextColor"
-                    android:layout_gravity="center_vertical"
-                    />
+                    android:textColor="@color/timeTextColor" />
 
                 <ImageView
                     android:id="@+id/receive_status"
