--- a/app/src/main/res/layout/my_message_cell.xml
+++ b/app/src/main/res/layout/my_message_cell.xml
@@ -51,8 +51,8 @@
                 android:textSize="18sp"
                 android:typeface="sans"
                 android:layout_marginTop="5dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp" />
+                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
