--- a/app/src/main/res/layout/receiving_image_message_cell.xml
+++ b/app/src/main/res/layout/receiving_image_message_cell.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp">
 
     <LinearLayout
@@ -30,17 +31,17 @@
             android:layout_height="270dp"
             android:layout_gravity="start"
             android:background="@drawable/in_coming_speech"
-            android:paddingBottom="4dp"
-            android:paddingEnd="6dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="6dp"
-            android:paddingStart="16dp"
-            android:paddingTop="4dp">
+            android:paddingBottom="1dp"
+            android:paddingLeft="11dp"
+            android:paddingStart="11dp"
+            android:paddingEnd="1dp"
+            android:paddingRight="1dp"
+            android:paddingTop="1dp">
 
             <ImageView
                 android:id="@+id/receiving_img_cell"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:scaleType="centerCrop"
