--- a/app/src/main/res/menu/group_chat_menu.xml
+++ b/app/src/main/res/menu/group_chat_menu.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/admin"
-        android:title="Become Admin"
+        android:title="@string/be_admin"
         android:visible="false"
         />
 
