--- a/app/src/main/res/layout/receiving_image_message_cell.xml
+++ b/app/src/main/res/layout/receiving_image_message_cell.xml
@@ -38,30 +38,6 @@
             android:paddingRight="1dp"
             android:paddingTop="1dp">
 
-            <ImageView
-                android:id="@+id/receiving_img_cell"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/unknown" />
-
-            <TextView
-                android:id="@+id/dateTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="7dp"
-                android:shadowColor="#000000"
-                android:shadowDx="1.5"
-                android:shadowDy="1.3"
-                android:shadowRadius="1.6"
-                android:text="13 May 2017, 1:19 AM"
-                android:textColor="@color/timeTextColor" />
-
             <TextView
                 android:id="@+id/sender_id"
                 android:layout_width="wrap_content"
@@ -79,6 +55,31 @@
                 android:textColor="@color/timeTextColor"
                 android:visibility="gone"
                 />
+
+            <ImageView
+                android:id="@+id/receiving_img_cell"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@id/sender_id"
+                android:scaleType="centerCrop"
+                android:src="@drawable/unknown" />
+
+            <TextView
+                android:id="@+id/dateTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="7dp"
+                android:shadowColor="#000000"
+                android:shadowDx="1.5"
+                android:shadowDy="1.3"
+                android:shadowRadius="1.6"
+                android:text="13 May 2017, 1:19 AM"
+                android:textColor="@color/timeTextColor" />
 
         </RelativeLayout>
 
