--- a/app/src/main/res/layout/activity_group_detail.xml
+++ b/app/src/main/res/layout/activity_group_detail.xml
@@ -99,7 +99,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_below="@+id/title_tv">
+                    android:layout_below="@+id/title_tv"
+                    android:paddingRight="10dp"
+                    android:paddingEnd="10dp"
+                    >
 
                 <EditText
                     android:id="@+id/group_name_et"
@@ -109,13 +112,13 @@
                     android:layout_gravity="center_vertical"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
-                    android:textSize="13sp"
+                    android:textSize="15sp"
                     android:hint="Group Name"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:maxLength="@string/group_name_text"
                     android:enabled="false"
-                    android:background="@drawable/bottom_border_white"
+                    android:background="@null"
                     android:visibility="gone"
                     />
 
@@ -126,9 +129,7 @@
                     android:layout_gravity="center_vertical"
                     android:scaleType="center"
                     android:src="@android:drawable/ic_menu_edit"
-                    android:background="@color/main_theme_1"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="10dp"
+                    android:background="@drawable/button_shape"
                     android:visibility="gone"
                     />
                 </LinearLayout>
@@ -181,7 +182,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="@string/be_admin"
-                    android:background="@color/main_theme_1"
+                    android:background="@drawable/button_shape"
                     android:padding="5dp"
                     android:textColor="@color/white"
                     android:drawableLeft="@android:drawable/ic_lock_idle_lock"
