--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -103,11 +103,11 @@
                                 android:layout_height="48dp"
                                 android:layout_weight="1"
                                 android:layout_gravity="center_vertical"
-                                android:background="@drawable/bottom_border_white"
                                 android:enabled="false"
                                 android:maxLines="1"
                                 android:maxLength="@string/profile_name_text"
                                 android:inputType="textPersonName"
+                                android:background="@null"
                                 android:hint="@string/profile_hint"/>
 
                             <ImageView
@@ -115,7 +115,7 @@
                                 android:layout_width="48dp"
                                 android:layout_height="48dp"
                                 android:layout_gravity="center_vertical"
-                                android:background="@color/main_theme_1"
+                                android:background="@drawable/button_shape"
                                 android:scaleType="center"
                                 android:src="@android:drawable/ic_menu_edit" />
 
