--- a/app/src/main/res/layout/my_image_message_cell.xml
+++ b/app/src/main/res/layout/my_image_message_cell.xml
@@ -51,8 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:orientation="horizontal">
+                android:layout_alignParentStart="true">
 
                 <TextView
                     android:id="@+id/dateTime"
