fixed problem with image view landscape viewing

--- a/app/src/main/res/layout/fragment_session_all_chats.xml
+++ b/app/src/main/res/layout/fragment_session_all_chats.xml
@@ -33,10 +33,11 @@
                />
 
            <TextView
+               android:id="@+id/no_chats_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:text="No chats"
                android:textSize="25sp"
+               android:text="@string/fragment_empty_chat"
                android:layout_gravity="center"
                />
 
