--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -71,7 +71,11 @@
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
                 android:paddingRight="5dp"
-                android:paddingEnd="5dp"/>
+                android:paddingEnd="5dp"
+                android:imeOptions="flagNoExtractUi"
+                >
+                <requestFocus />
+            </hani.momanii.supernova_emoji_library.Helper.EmojiconEditText>
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/media_button"
