--- a/app/src/main/res/layout/image_viewer_dialog.xml
+++ b/app/src/main/res/layout/image_viewer_dialog.xml
@@ -1,59 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <ImageView
-        android:id="@+id/image_viewer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/unknown" />
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="5dp">
-
-        <ProgressBar
-            android:id="@+id/upload_progress"
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:layout_gravity="center"
-            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-            />
-
-    </FrameLayout>
-
-
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    >
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <android.support.v7.widget.AppCompatImageButton
-            android:id="@+id/cancel_image"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:src="@android:drawable/ic_menu_close_clear_cancel"
-            android:background="@drawable/shadow"
-            android:padding="5dp"
-            />
+        <ImageView
+            android:id="@+id/image_viewer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/unknown" />
 
-        <android.support.v7.widget.AppCompatImageButton
-            android:id="@+id/send_image"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:src="@android:drawable/ic_menu_send"
-            android:background="@drawable/shadow"
-            android:padding="5dp"
-            />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="5dp">
+
+            <ProgressBar
+                android:id="@+id/upload_progress"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:layout_gravity="center"
+                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+                />
+
+        </FrameLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <android.support.v7.widget.AppCompatImageButton
+                android:id="@+id/cancel_image"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:src="@android:drawable/ic_menu_close_clear_cancel"
+                android:background="@drawable/shadow"
+                android:padding="5dp"
+                />
+
+            <android.support.v7.widget.AppCompatImageButton
+                android:id="@+id/send_image"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:src="@android:drawable/ic_menu_send"
+                android:background="@drawable/shadow"
+                android:padding="5dp"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
