--- a/app/src/main/res/layout/activity_chat_detail.xml
+++ b/app/src/main/res/layout/activity_chat_detail.xml
@@ -30,7 +30,8 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:src="@drawable/unknown"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.7"/>
+                app:layout_collapseParallaxMultiplier="0.7"
+                android:transitionName="@string/picture_transition_name"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
