--- a/app/src/main/res/layout/activity_group_detail.xml
+++ b/app/src/main/res/layout/activity_group_detail.xml
@@ -31,7 +31,8 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:src="@drawable/ic_group_unknown"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.7"/>
+                app:layout_collapseParallaxMultiplier="0.7"
+                android:transitionName="@string/picture_transition_name"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -247,23 +248,12 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|center"
-        app:srcCompat="@android:drawable/ic_menu_camera"
-        android:visibility="gone"
-        app:backgroundTint="@color/main_theme_1"/>
-
-    <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|start"
+        app:layout_anchorGravity="bottom|center"
         app:srcCompat="@android:drawable/ic_delete"
         android:visibility="gone"
         app:backgroundTint="@color/main_theme_1"/>
