--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,10 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="10dp"
     >
 
-    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ImageView
         android:id="@+id/image_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,31 +18,21 @@
         />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_alignBottom="@id/image_header"
         android:layout_centerHorizontal="true"
         android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:paddingBottom="5dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/update_profile_pic"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
             android:src="@drawable/unknown"
             />
 
-        <TextView
-            android:id="@+id/prof_info_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@color/white"
-            android:shadowColor="#000000"
-            android:shadowDx="1.5"
-            android:shadowDy="1.3"
-            android:shadowRadius="1.6"
-            />
 
         <TextView
             android:id="@+id/prof_info_status"
@@ -66,15 +55,16 @@
                 android:id="@+id/undo_profile_pic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Undo"
-                android:background="@drawable/rounded_shadow"
+                android:text="@string/undo_profile"
+                android:background="@drawable/button_shape"
                 android:padding="8dp"
-                android:textColor="#8eb93d"
+                android:textColor="@color/white"
                 android:shadowColor="#000000"
                 android:shadowDx="1.5"
                 android:shadowDy="1.3"
                 android:shadowRadius="1.6"
                 android:clickable="true"
+                android:focusable="true"
                 android:textAlignment="center"
                 android:layout_margin="2dp"
                 />
@@ -83,16 +73,17 @@
                 android:id="@+id/reset_profile_pic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Reset"
-                android:background="@drawable/rounded_shadow"
+                android:text="@string/reset_profile"
+                android:background="@drawable/button_shape"
                 android:padding="8dp"
                 android:maxLines="1"
-                android:textColor="#FF8EB93D"
+                android:textColor="@color/white"
                 android:shadowColor="#000000"
                 android:shadowDx="1.5"
                 android:shadowDy="1.3"
                 android:shadowRadius="1.6"
                 android:clickable="true"
+                android:focusable="true"
                 android:textAlignment="center"
                 android:layout_margin="2dp"/>
 
