--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -1,51 +1,53 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:elevation="4dp"
-    app:cardUseCompatPadding="true">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="5dp"
+    android:paddingRight="5dp"
+    android:paddingEnd="5dp"
+    android:paddingLeft="5dp"
+    android:paddingStart="5dp"
+    android:orientation="horizontal">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/prof_pic"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginEnd="2dp"
+        android:src="@drawable/placeholder"
+        android:background="?selectableItemBackgroundBorderless"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
         android:orientation="horizontal"
-        >
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/prof_pic"
-            android:layout_width="55dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="2dp"
-            android:layout_marginEnd="2dp"
-            android:src="@drawable/placeholder"
-            android:layout_centerVertical="true"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            />
+        android:background="@drawable/bottom_border_dark"
+        android:paddingBottom="10dp">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.6"
+            android:layout_weight="0.7"
             android:orientation="vertical"
-            android:id="@+id/linear"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="5dp">
 
-            <TextView
-                android:id="@+id/prof_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Profile Name"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
+           <LinearLayout
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content">
+
+               <TextView
+                   android:id="@+id/prof_name"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Profile Name"
+                   android:textSize="16sp"
+                   android:textStyle="bold"/>
+
+           </LinearLayout>
 
             <LinearLayout
                 android:layout_marginTop="5dp"
@@ -83,40 +85,38 @@
             android:id="@+id/linear2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.4"
+            android:layout_weight="0.3"
             android:orientation="vertical"
-            android:layout_marginRight="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
-            android:padding="5dp"
             android:gravity="end">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:gravity="center">
+                >
 
                 <TextView
                     android:id="@+id/dateTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="29/09/2018"
+                    android:textSize="11sp"
                     android:textAllCaps="true"
-                    />
+                    android:layout_gravity="end"/>
 
-                <Button
-                    android:id="@+id/add_contact_btn"
+                <TextView
+                    android:id="@+id/unread_counter"
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:background="@drawable/button_shape"
-                    android:drawableStart="@drawable/ic_friend"
-                    android:paddingLeft="25dp"
-                    android:paddingRight="25dp"
-                    android:textColor="#FFFFFF"
-                    android:textSize="15sp"
-                    android:drawableLeft="@drawable/ic_friend"
-                    android:layout_margin="3dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/unread_counter"
+                    android:text="0"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:visibility="gone"
                     />
 
             </LinearLayout>
@@ -125,5 +125,4 @@
 
     </LinearLayout>
 
-
-</android.support.v7.widget.CardView>
+</LinearLayout>
